# blist

./: .clang-format  .gitattributes  .gitignore  APPLNAME  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  azure-pipelines.yml  blist.cc  blist.h  blist.make  blist_version.h.in  build.sh  clean.sh  file_filter.cc  main.cc  makefile  test.sh  test_filter.cc  tmpl_version.h.in
.github/: dependabot.yml
.github/workflows/: build-ci.yml  build-linux.yml  build-windows.yml  codeql-analysis.yml  linter.yml  main.yml
cmake/: ApprovalTests.cmake  WarningsAsErrors.cmake  cmake-modules.cmake  cmake-modules.download.in  googletest.cmake
libsrc/: Boolean.h  CMakeLists.txt  File.cc  File.h  FileIterator.h  FileName.cc  FileName.h  FilePath.cc  FilePath.h  TextBox.cc  TextBox.h  TraceEntryExit.cc  TraceEntryExit.h  classname.h  dobject.cc  dobject.h  fileutil.cc  fileutil.h  filter.cc  filter.h  getopt.cc  getopt.h  libnjtcpp.make  list.cc  list.h  proginfo.cc  proginfo.h  sstring.cc  sstring.h  test_filter.cc  utildbug.cc  utildbug.h  utilmsg.cc  utilmsg.h
src/: CMakeLists.txt  blist.cc  blist.h  file_filter.cc
tests/: CMakeLists.txt  basic_tests.cc  blist_tests.cc  file_filter_tests.cc  lib_tests.cc
